--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,4 +1,5 @@
 .container {
+    background-color: $color-bg;
     box-sizing: border-box;
     font-family: $font-family;
     font-size: $font-size-base;
