Added noscript case + hidden container

--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -1,7 +1,7 @@
 // VARS
 $color-border: #DCDCDC;
 
-$color-primary:   #FFBB00;
+$color-primary:   #FBBC05;
 $color-secondary: #F2F2F2;
 
 $color-bg: #FFFFFF;
