--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -4,6 +4,12 @@
     font-family: $font-family;
     font-size: $font-size-base;
     max-width: $container-width;
+    transition: opacity 1s ease-in-out;
+
+    &--hidden {
+        zoom: 1;
+        opacity: 0;
+    }
 }
 
 .skip {
