--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,3 +1,15 @@
+.spinner {
+    &--hidden {
+        display: none;
+    }
+}
+
+.skip {
+    &--hidden {
+        @include visuallyHidden(true);
+    }
+}
+
 .container {
     background-color: $color-bg;
     box-sizing: border-box;
@@ -9,11 +21,5 @@
     &--hidden {
         zoom: 1;
         opacity: 0;
-    }
-}
-
-.skip {
-    &--hidden {
-        @include visuallyHidden(true);
     }
 }
