Added basic margins

--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -2,5 +2,5 @@
     bottom: $footer-bottom;
     height: $footer-height;
     position: absolute;
-    width: $footer-width;
+    width: calc(#{$footer-width} - (#{$base-margin-left-right} * 2));
 }
