--- a/src/css/_utils.scss
+++ b/src/css/_utils.scss
@@ -5,6 +5,9 @@ $font-family:     "Roboto";
 $font-size-base:  16px;
 $font-size-title: 24px;
 
+$base-margin-top-bottom: 0;
+$base-margin-left-right: 10px;
+
 $body-height: 100%;
 
 $header-padding-height: 10px;
