--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -31,3 +31,9 @@ body {
         opacity: $container-hidden-opacity;
     }
 }
+
+.main,
+.aside,
+.footer {
+    margin: $base-margin-top-bottom $base-margin-left-right;
+}
